# liquid-cli

./: Cargo.toml  README.md  liquid_transfer_poc.sh
src/: main.rs  transfer_poc.rs
